--- a/.github/workflows/deploy-pipeline.yaml
+++ b/.github/workflows/deploy-pipeline.yaml
@@ -46,6 +46,7 @@ jobs:
           path: ${{ github.sha }}.zip
   publish:
     runs-on: ubuntu-latest
+    needs: build
     steps:
       - name: Create release
         uses: actions/create-release@v1
@@ -57,4 +58,16 @@ jobs:
           body: New release for ${{ github.sha }}. Release notes can be found in the docs
           draft: false
           prerelease: false
-          
+      - name: Download artifact
+        uses: actions/download-artifact@v2
+        with:
+          name: zipped bundle
+      - name: Upload release assets
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.github_token }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: ./${{ github.sh }}.zip
+          asset_name: source_code_with_libraries.zip
+          asset_content_type: application/zip
