--- a/.github/workflows/deploy-pipeline.yaml
+++ b/.github/workflows/deploy-pipeline.yaml
@@ -61,7 +61,7 @@ jobs:
       - name: Download artifact
         uses: actions/download-artifact@v2
         with:
-          name: zipped bundle
+          name: zipped-bundle
       - name: Upload release assets
         uses: actions/upload-release-asset@v1
         env:
