--- a/.github/workflows/deploy-pipeline.yaml
+++ b/.github/workflows/deploy-pipeline.yaml
@@ -49,19 +49,21 @@ jobs:
     needs: build
     steps:
       - name: Create release
+        id: create_release
         uses: actions/create-release@v1
         env:
-          GITHUB_TOKEN: ${{ secrets.github_token }}
+          GITHUB_TOKEN: ${{ secrets.github_token }} # This token is provided by Actions, you do not need to create your own token
         with:
           tag_name: ${{ github.run_number }}
-          release_name: Release for ${{ github.run_number }}
-          body: New release for ${{ github.sha }}. Release notes can be found in the docs
+          release_name: Release ${{ github.run_number }}
+          body: New release for ${{ github.sha }}. Release notes can be found in the docs.
           draft: false
           prerelease: false
       - name: Download artifact
         uses: actions/download-artifact@v2
         with:
           name: zipped-bundle
+
           
       - name: Upload release asset
         uses: actions/upload-release-asset@v1
